--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -117,19 +117,19 @@ layout: page
   <!-- Carousel items -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{{ site.baseurl }}/assets/img/team/1.jpg" class="d-block w-100" alt="Image 1">
+      <img src="{{ '/assets/img/team/1.jpg' | relative_url}} " class="d-block w-100" alt="Image 1">
     </div>
     <div class="carousel-item">
-      <img src="{{ site.baseurl }}/assets/img/team/2.jpg" class="d-block w-100" alt="Image 2">
+      <img src="{{ '/assets/img/team/2.jpg' | relative_url}} " class="d-block w-100" alt="Image 2">
     </div>
     <div class="carousel-item">
-      <img src="{{ site.baseurl }}/assets/img/team/3.jpg" class="d-block w-100" alt="Image 3">
+      <img src="{{ '/assets/img/team/3.jpg' | relative_url}} " class="d-block w-100" alt="Image 3">
     </div>
     <div class="carousel-item">
-      <img src="{{ site.baseurl }}/assets/img/team/4.jpg" class="d-block w-100" alt="Image 3">
+      <img src="{{ '/assets/img/team/4.jpg' | relative_url}} " class="d-block w-100" alt="Image 3">
     </div>
     <div class="carousel-item">
-      <img src="{{ site.baseurl }}/assets/img/team/5.png" class="d-block w-100" alt="Image 3">
+      <img src="{{ '/assets/img/team/5.png' | relative_url}} " class="d-block w-100" alt="Image 3">
     </div>
   </div>
 
