--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -129,7 +129,7 @@ layout: page
       <img src="{{ '/assets/img/team/4.jpg' | relative_url}} " class="d-block w-100" alt="Image 3">
     </div>
     <div class="carousel-item">
-      <img src="{{ '/assets/img/team/5.png' | relative_url}} " class="d-block w-100" alt="Image 3">
+      <img src="{{ site.baseurl }}/assets/img/team/5.png" class="d-block w-100" alt="Image 3">
     </div>
   </div>
 
