checking with new pic in carousel

--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -117,7 +117,7 @@ layout: page
   <!-- Carousel items -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{{ '/assets/img/team/1.jpg' | relative_url}} " class="d-block w-100" alt="Image 1">
+      <img src="{{ '/assets/img/sri-img.png' | relative_url}} " class="d-block w-100" alt="Image 1">
     </div>
     <div class="carousel-item">
       <img src="{{ '/assets/img/team/2.jpg' | relative_url}} " class="d-block w-100" alt="Image 2">
