--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -126,7 +126,7 @@ layout: page
       <img src="{{ '/assets/img/team/3.jpg' | relative_url }} " class="d-block w-100" alt="Image 3">
     </div>
     <div class="carousel-item">
-      <img src="{{ '/assets/img/team/4.jpg' | relative_url }}" class="d-block w-100" alt="Image 3">
+      <img src="/assets/img/team/4.jpg" class="d-block w-100" alt="Image 3">
     </div>
     <div class="carousel-item">
       <img src="{{ '/assets/img/team/5.png' | relative_url }}" class="d-block w-100" alt="Image 3">
