--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -116,21 +116,23 @@ layout: page
 
   <!-- Carousel items -->
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="ccmi/assets/img/team/1.jpg" class="d-block w-100" alt="Image 1">
-    </div>
-    <div class="carousel-item">
-      <img src="ccmi/assets/img/team/2.jpg" class="d-block w-100" alt="Image 2">
-    </div>
-    <div class="carousel-item">
-      <img src="ccmi/assets/img/team/3.jpg" class="d-block w-100" alt="Image 3">
-    </div>
-    <div class="carousel-item">
-      <img src="ccmi/assets/img/team/4.jpg" class="d-block w-100" alt="Image 3">
-    </div>
-    <div class="carousel-item">
-      <img src="{{ '/assets/img/team/5.png' | relative_url }}" class="d-block w-100" alt="Image 3">
-    </div>
+<div class="carousel-inner">
+  <div class="carousel-item active">
+    <img src="{{ '/assets/img/team/1.jpg' | relative_url }}" class="d-block w-100" alt="Image 1">
+  </div>
+  <div class="carousel-item">
+    <img src="{{ '/assets/img/team/2.jpg' | relative_url }}" class="d-block w-100" alt="Image 2">
+  </div>
+  <div class="carousel-item">
+    <img src="{{ '/assets/img/team/3.jpg' | relative_url }}" class="d-block w-100" alt="Image 3">
+  </div>
+  <div class="carousel-item">
+    <img src="{{ '/assets/img/team/4.jpg' | relative_url }}" class="d-block w-100" alt="Image 4">
+  </div>
+  <div class="carousel-item">
+    <img src="{{ '/assets/img/team/5.png' | relative_url }}" class="d-block w-100" alt="Image 5">
+  </div>
+</div>
   </div>
 
   <!-- Controls -->
