--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -118,16 +118,16 @@ layout: page
   <div class="carousel-inner">
 <div class="carousel-inner">
   <div class="carousel-item active">
-    <img src="{{ '/assets/img/team/1.jpg' | relative_url }}" class="d-block w-100" alt="Image 1">
+    <img src="{{ '/assets/img/team/1.png' | relative_url }}" class="d-block w-100" alt="Image 1">
   </div>
   <div class="carousel-item">
-    <img src="{{ '/assets/img/team/2.jpg' | relative_url }}" class="d-block w-100" alt="Image 2">
+    <img src="{{ '/assets/img/team/2.png' | relative_url }}" class="d-block w-100" alt="Image 2">
   </div>
   <div class="carousel-item">
-    <img src="{{ '/assets/img/team/3.jpg' | relative_url }}" class="d-block w-100" alt="Image 3">
+    <img src="{{ '/assets/img/team/3.png' | relative_url }}" class="d-block w-100" alt="Image 3">
   </div>
   <div class="carousel-item">
-    <img src="{{ '/assets/img/team/4.jpg' | relative_url }}" class="d-block w-100" alt="Image 4">
+    <img src="{{ '/assets/img/team/4.png' | relative_url }}" class="d-block w-100" alt="Image 4">
   </div>
   <div class="carousel-item">
     <img src="{{ '/assets/img/team/5.png' | relative_url }}" class="d-block w-100" alt="Image 5">
