--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -1,6 +1,24 @@
 ---
 layout: default
 ---
+<style>
+  a {
+    color: #BF40BF;
+  }
+
+  .jumbotron {
+    background-color: white !important;
+    padding: 0;
+    margin: 0;
+  }
+  .jumbotron img {
+    width: 100%;
+    height: auto;
+    display: block; /* Ensures there are no gaps */
+  }
+
+</style>
+
 <div class="post">
   <header class="post-header">
     <h1 class="post-title">
